object done, fingers crossed it doesn't crash

--- a/index.Rmd
+++ b/index.Rmd
@@ -84,7 +84,77 @@ college_towns <- c("Bloomington, MN", "Minneapolis, MN", "Bemidji, MN",  "Mankat
                   
                   "Portland, OR", "Salem, OR", "La Grande, OR", "Newburg, OR", "McMinnville, OR", "Saint Benedict, OR", "St. Benedict, OR", "Eugene, OR", "Klamath Falls, OR", "Corvallis, OR", "Bend, OR", "Forest Grove, OR", "Beaverton, OR", "Ashland, OR", "Monmouth, OR",
                   
-                  "Reading, PA", "Meadville, PA", "Glenside, PA", "Bloomsburg, PA", "Bryn Athyn, PA", "Bryn Mawr, PA", "Lewisburg, PA", "Radnor, PA", "Reading, PA", "Meadville, PA", "Glenside, PA", "Bloomsburg, PA", "Bryn Athyn, PA", "Bryn Mawr, PA", "Lewisburg, PA", "Radnor, PA", "Langhorne, PA", "California, PA", "Pittsburgh, PA", "Allentown, PA", "Summerdale, PA", "Philadelphia, PA", "Cheyney, PA", "Clarion, PA", "South Abington Township, PA", "Doylestown, PA", "Center Valley, PA", "Fort Washington, PA", "Ft. Washington, PA", "Carlisle, PA", "East Stroudsburg, PA", "Saint Davids, PA", "St. Davids, PA", "Edinboro, PA", "Elizabethtown, PA", "Lancaster, PA", "Erie, PA", "Beaver Falls, PA", "Gettysburg, PA", "Melrose Park, PA", "Grove City, PA", "Gwynedd Valley, PA", "Harrisburg, PA", "Haverford, PA", "Immaculata, PA", "Indiana, PA", "Huntingdon, PA", "La Plume, PA", "Wilkes Barre, PA", "Kutztown, PA", "Scranton, PA", "Easton, PA", "Annville, PA", "Bethlehem, PA", "Lincoln University, PA", "Lock Haven, PA", "Williamsport, PA", "Jenkintown, PA", "Mansfield, PA", "Mechanicsburg, PA", "MIllersville, PA", "Dallas, PA", "Cresson, PA", "Allentown, PA", "Ashton, PA", "Williamsport, PA", "University Park, PA", "Abington, PA", "Altoola, PA", "Monaca, PA", "Media, PA", "DuBois, PA", "Lemont Furnace, PA", "McKeesport, PA", "Middletown, PA", "Hazleton, PA", "Center Valley, PA", "Mont Alto, PA", "New Kensington, PA", "Schuylkill Haven, PA", "Dunmore, PA", "Sharon, PA", "Lehman, PA", "York, PA", "Oakdale, PA", "Moon Township, PA", "Rosemount, PA", "Wynnewood, PA", "Loretto, PA", "Latrobe, PA", "Greensburg, PA", "Shippensburg, PA", "Slippery Rock, PA", "Trevose, PA", "Selinsgrove, PA", "Swarthmore, PA", "Greenville, PA", "Bradford, PA", "Johnstown, PA", "Phoenixville, PA", "Collegeville, PA", "Villanova, PA", "Washington, PA", "Waynesburg, PA", "West Chester, PA", "New Wilmington, PA", "Chester, PA", "Wilkes-Barre, PA", "Chambersburg, PA", "California, PA", "Pittsburgh, PA", "Allentown, PA", "Summerdale, PA", "Philadelphia, PA", "Cheyney, PA", "Clarion, PA", "South Abington Township, PA", "Doylestown, PA", "Center Valley, PA", "Fort Washington, PA", "Ft. Washington, PA", "Carlisle, PA", "East Stroudsburg, PA", "Saint Davids, PA", "St. Davids, PA", "Edinboro, PA", "Elizabethtown, PA", "Lancaster, PA", "Erie, PA", "Beaver Falls, PA", "Gettysburg, PA", "Melrose Park, PA", "Grove City, PA", "Gwynedd Valley, PA", "Harrisburg, PA", "Haverford, PA", "Immaculata, PA", "Indiana, PA", "Huntingdon, PA", "La Plume, PA", "Wilkes Barre, PA", "Kutztown, PA", "Scranton, PA", "Easton, PA", "Annville, PA", "Bethlehem, PA", "Lincoln University, PA", "Lock Haven, PA", "Williamsport, PA", "Jenkintown, PA", "Mansfield, PA", "Mechanicsburg, PA", "MIllersville, PA", "Dallas, PA", "Cresson, PA", "Allentown, PA", "Ashton, PA", "University Park, PA", "Abington, PA", "Altoola, PA", "Monaca, PA", "Media, PA", "DuBois, PA", "Lemont Furnace, PA", "McKeesport, PA", "Middletown, PA", "Hazleton, PA", "Center Valley, PA", "Mont Alto, PA", "New Kensington, PA", "Schuylkill Haven, PA", "Dunmore, PA", "Sharon, PA", "Lehman, PA", "Oakdale, PA", "Moon Township, PA", "Rosemount, PA", "Wynnewood, PA", "Loretto, PA", "Latrobe, PA", "Greensburg, PA", "Shippensburg, PA", "Slippery Rock, PA", "Trevose, PA", "Selinsgrove, PA", "Swarthmore, PA", "Greenville, PA", "Bradford, PA", "Johnstown, PA", "Phoenixville, PA", "Collegeville, PA", "Villanova, PA", "Washington, PA", "Waynesburg, PA", "West Chester, PA", "New Wilmington, PA", "Chester, PA", "Wilkes-Barre, PA", "Chambersburg, PA")
+                  "Reading, PA", "Meadville, PA", "Glenside, PA", "Bloomsburg, PA", "Bryn Athyn, PA", "Bryn Mawr, PA", "Lewisburg, PA", "Radnor, PA", "Reading, PA", "Meadville, PA", "Glenside, PA", "Bloomsburg, PA", "Bryn Athyn, PA", "Bryn Mawr, PA", "Lewisburg, PA", "Radnor, PA", "Langhorne, PA", "California, PA", "Pittsburgh, PA", "Allentown, PA", "Summerdale, PA", "Philadelphia, PA", "Cheyney, PA", "Clarion, PA", "South Abington Township, PA", "Doylestown, PA", "Center Valley, PA", "Fort Washington, PA", "Ft. Washington, PA", "Carlisle, PA", "East Stroudsburg, PA", "Saint Davids, PA", "St. Davids, PA", "Edinboro, PA", "Elizabethtown, PA", "Lancaster, PA", "Erie, PA", "Beaver Falls, PA", "Gettysburg, PA", "Melrose Park, PA", "Grove City, PA", "Gwynedd Valley, PA", "Harrisburg, PA", "Haverford, PA", "Immaculata, PA", "Indiana, PA", "Huntingdon, PA", "La Plume, PA", "Wilkes Barre, PA", "Kutztown, PA", "Scranton, PA", "Easton, PA", "Annville, PA", "Bethlehem, PA", "Lincoln University, PA", "Lock Haven, PA", "Williamsport, PA", "Jenkintown, PA", "Mansfield, PA", "Mechanicsburg, PA", "MIllersville, PA", "Dallas, PA", "Cresson, PA", "Allentown, PA", "Ashton, PA", "Williamsport, PA", "University Park, PA", "Abington, PA", "Altoola, PA", "Monaca, PA", "Media, PA", "DuBois, PA", "Lemont Furnace, PA", "McKeesport, PA", "Middletown, PA", "Hazleton, PA", "Center Valley, PA", "Mont Alto, PA", "New Kensington, PA", "Schuylkill Haven, PA", "Dunmore, PA", "Sharon, PA", "Lehman, PA", "York, PA", "Oakdale, PA", "Moon Township, PA", "Rosemount, PA", "Wynnewood, PA", "Loretto, PA", "Latrobe, PA", "Greensburg, PA", "Shippensburg, PA", "Slippery Rock, PA", "Trevose, PA", "Selinsgrove, PA", "Swarthmore, PA", "Greenville, PA", "Bradford, PA", "Johnstown, PA", "Phoenixville, PA", "Collegeville, PA", "Villanova, PA", "Washington, PA", "Waynesburg, PA", "West Chester, PA", "New Wilmington, PA", "Chester, PA", "Wilkes-Barre, PA", "Chambersburg, PA", "California, PA", "Pittsburgh, PA", "Allentown, PA", "Summerdale, PA", "Philadelphia, PA", "Cheyney, PA", "Clarion, PA", "South Abington Township, PA", "Doylestown, PA", "Center Valley, PA", "Fort Washington, PA", "Ft. Washington, PA", "Carlisle, PA", "East Stroudsburg, PA", "Saint Davids, PA", "St. Davids, PA", "Edinboro, PA", "Elizabethtown, PA", "Lancaster, PA", "Erie, PA", "Beaver Falls, PA", "Gettysburg, PA", "Melrose Park, PA", "Grove City, PA", "Gwynedd Valley, PA", "Harrisburg, PA", "Haverford, PA", "Immaculata, PA", "Indiana, PA", "Huntingdon, PA", "La Plume, PA", "Wilkes Barre, PA", "Kutztown, PA", "Scranton, PA", "Easton, PA", "Annville, PA", "Bethlehem, PA", "Lincoln University, PA", "Lock Haven, PA", "Williamsport, PA", "Jenkintown, PA", "Mansfield, PA", "Mechanicsburg, PA", "MIllersville, PA", "Dallas, PA", "Cresson, PA", "Allentown, PA", "Ashton, PA", "University Park, PA", "Abington, PA", "Altoola, PA", "Monaca, PA", "Media, PA", "DuBois, PA", "Lemont Furnace, PA", "McKeesport, PA", "Middletown, PA", "Hazleton, PA", "Center Valley, PA", "Mont Alto, PA", "New Kensington, PA", "Schuylkill Haven, PA", "Dunmore, PA", "Sharon, PA", "Lehman, PA", "Oakdale, PA", "Moon Township, PA", "Rosemount, PA", "Wynnewood, PA", "Loretto, PA", "Latrobe, PA", "Greensburg, PA", "Shippensburg, PA", "Slippery Rock, PA", "Trevose, PA", "Selinsgrove, PA", "Swarthmore, PA", "Greenville, PA", "Bradford, PA", "Johnstown, PA", "Phoenixville, PA", "Collegeville, PA", "Villanova, PA", "Washington, PA", "Waynesburg, PA", "West Chester, PA", "New Wilmington, PA", "Chester, PA", "Wilkes-Barre, PA", "Chambersburg, PA",
+                  
+                  "Providence, RI", "Smithfield, RI", "East Greenwich, RI", "Bristol, RI", "Newport, RI", "Kingston, RI",
+                  
+                  "Columbia, SC", "Charleston, SC", "Anderson, SC", "Greenville, SC", "Orangeburg, SC", "Clemson, SC", "Rock Hill, SC", "Conway, SC", "Hartsville, SC", "Spartanburg, SC", "Due West, SC", "Florence, SC", "Greenwood, SC", "Gaffney, SC", "Sumter, SC", "Newberry, SC", "Tigerville, SC", "Clinton, SC", "Central, SC", "Aiken, SC", "Bluffton, SC", "Denmark, SC",
+                  
+                  "Sioux Falls, SD", "Spearfish, SD", "Madison, SD", "Mitchell, SD", "Yankton, SD", "Ellsworth Air Force Base, SD", "Rapid City, SD", "Aberdeen, SD", "Kyle, SD", "Mission, SD", "Brookings, SD", "Vermillion, SD",
+                  
+                  "Nashville, TN", "Clarksville, TN", "Memphis, TN", "McKenzie, TN", "Dayton, TN", "Jefferson City, TN", "Lebanon, TN", "Johnson City, TN", "Henderson, TN", "Knoxville, TN", "Clarkesville, TN", "Murfreesboro, TN", "Bristol, TN", "Jackson, TN", "Cleveland, TN", "Harrogate, TN", "Pulaski, TN", "Maryville, TN", "Milligan, TN", "Collegedale, TN", "Cookeville, TN", "Athens, TN", "Chattanooga, TN", "Martin, TN", "Sewanee, TN", "Greeneville, TN", "Cordova, TN", "Gallatin, TN", "Franklin, TN",
+                  
+                  "Abilene, TX", "Garland, TX", "Houston, TX", "San Angelo, TX", "Dallas, TX", "Arlington, TX", "Sherman, TX", "Austin, TX", "San Antonio, TX",  "Jacksonville, TX", "Waco, TX", "Lake Jackson, TX", "McKinney, TX", "Richardson, TX", "Irving, TX", "Marshall, TX", "Galveston, TX", "Cedar Park, TX", "Conroe, TX", "Denison, TX", "Brownwood, TX", "Hawkins, TX", "Beaumont, TX", "Laredo, TX", "Longview, TX", "Lubbock, TX", "Bedford, TX", "Midland, TX", "Wichita Falls, TX", "Georgetown, TX", "Killeen, TX", "Mesquite, TX", "Stafford, TX", "Prairie View, TX", "Fort Worth , TX", "Huntsville, TX", "Kerrville, TX", "McAllen, TX", "Round Rock, TX", "El Paso, TX", "Keene, TX", "Waxahachie, TX", "Terrell, TX", "Nacogdoches, TX", "Alpine, TX", "Stephenville, TX", "College Station, TX", "Commerce, TX", "Corpus Christi, TX", "Kingsville, TX", "Texarkana, TX", "Tyler, TX", "Seguin, TX", "San Marcos, TX", "Denton, TX", "Southlake, TX", "Odessa, TX", "Edinburg, TX", "Victoria, TX", "Belton, TX", "Plainview, TX", "Canyon, TX",
+                  
+                  "Draper, UT", "Provo, UT", "West Jordan, UT", "Orem, UT", "Saint George, UT", "St. George, UT", "Layton, UT", "Murray, UT", "Salt Lake City, UT", "Ephraim, UT", "Cedar City, UT", "West Haven, UT", "Logan, UT", "Ogden, UT",
+                  
+                  "Bennington, VT", "Castleton, VT", "Burlington, VT", "Plainfield, VT", "Putney, VT", "Marlboro, VT", "Middlebury, VT", "Montpelier, VT", "Johnson, VT", "Northfield, VT", "Colchester, VT", "Craftsbury Common, VT", "Randolph, VT",
+                  
+                  "Salem, VA", "Danville, VA", "Hampton, VA", "Bluefield, VA", "Richmond, VA", "Bridgewater, VA", "Virginia Beach, VA", "Lynchburg, VA", "Chesapeake, VA", "Arlington, VA", "Newport News, VA", "Harrisonburg, VA", "Emory, VA", "Fairfax, VA", "Ferrum, VA", "Hampden-Sydney, VA", "Hampden Sydney, VA", "Hampton, VA", "Roanoke, VA", "Vienna, VA", "Farmville, VA", "Staunton, VA", "Norfolk, VA", "Purcellville, VA", "Radford, VA", "Ashland, VA", "Winchester, VA", "Glen Allen, VA", "Buena Vista, VA", "Sweet Briar, VA", "Wise, VA", "Fredericksburg, VA", "University of Richmond, VA", "Falls Church, VA", "Lexington, VA", "Blacksburg, VA", "Petersburg, VA", "Williamsburg, VA",
+                  
+                  "Seattle, WA", "Kenmore, WA", "Bellevue, WA", "Bellingham, WA", "Bothell, WA", "Ellensburg, WA", "Centralia, WA", "Vancouver, WA", "Lakewood, WA", "Pasco, WA", "Redmond, WA", "Cheney, WA", "Lynnwood, WA", "Tacoma, WA", "Spokane, WA", "Aberdeen, WA", "Auburn, WA", "Toppenish, WA", "Des Moines, WA", "Kirkland, WA", "Longview, WA", "Bremerton, WA", "Port Angeles, WA", "Renton, WA", "Lacey, WA", "Mount Vernon, WA", "Olympia, WA", "Tukwila, WA", "Walla Walla, WA", "College Place, WA", "Pullman, WA", "Wenatchee, WA", "Yakima, WA",
+                  
+                  "Philippi, WV", "Charles Town, WV", "Mount Hope, WV", "Bethany, WV", "Bluefield, WV", "Athens, WV", "Elkin, WV", "Fairmont, WV", "Glenville, WV", "Huntington, WV", "Vienna, WV", "Keyser, WV", "Salem, WV", "Shepherdstown, WV", "Scott Depot, WV", "Charleston, WV", "Martinsburg, WV", "West Liberty, WV", "Institute, WV", "Morgantown, WV", "Parkersburg, WV", "Beckley, WV", "Buckhannon, WV", "Wheeling, WV",
+                  
+                  "Milwaukee, WI", "Green Bay, WI", "Beloit, WI", "Wauwatosa, WI", "Waukesha, WI", "Kenosha, WI", "Keshena, WI", "Glendale, WI", "Mequon, WI", "Madison, WI", "Brookfield, WI", "Manitowoc, WI", "Plymouth, WI", "Appleton, WI", "Watertown, WI", "Fond du Lac, WI", "Ashland, WI", "Ripon, WI", "De Pere, WI", "Eau Claire, WI", "La Crosse, WI", "Oshkosh, WI", "Platteville, WI", "River Falls, WI", "Stevens Point, WI", "Menomonie, WI", "Superior, WI", "Whitewater, WI",
+                  
+                  "Laramie, WY",
+                  
+                  "Normal, AL", "Montgomery, AL", "Athens, AL", "Auburn, AL", "Birmingham, AL", "Orange Beach, AL", "Florence, AL", "Huntsville, AL", "Jacksonville, AL", "Marion, AL", "Fairfield, AL", "Mobile, AL", "Selma, AL", "Tuscaloosa, AL", "Talladega, AL", "Troy, AL", "Tuskegee, AL", "Daphne, AL", "Montevallo, AL", "Livingston, AL",
+                  
+                  "Palmer, AK", "Anchorage, AK", "Barrow, AK", "Fairbanks, AK", "Juneau, AK",
+                  
+                  "Chandler, AZ", "Phoenix, AZ", "Glendale, AZ", "Tempe, AZ", "Mesa, AZ", "Scottsdale, AZ", "Tucson, AZ", "Tsaile, AZ", "Prescott, AZ", "Flagstaff, AZ", "Surprise, AZ", "Sierra Vista, AZ",
+                  
+                  "Little Rock, AR", "Jonesboro, AR", "Russellville, AR", "Conway, AR", "Hot Springs, AR", "Paragould, AR", "Springdale, AR", "Searcy, AR", "Arkadelphia, AR", "Siloam Springs, AR", "Batesville, AR", "Magnolia, AR", "Fayetteville, AR", "Monticello, AR", "Pine Bluff, AR", "Fort Smith, AR", "Clarkesville, AR", "Walnut Ridge, AR",
+                  
+                  "Glendale, CA", "San Francisco, CA", "San Diego, CA", "Los Angeles, CA", "Signal Hill, CA", "Lancaster, CA", "Santa Barbara, CA", "Pasadena, CA", "Whitter, CA", "Azusa , CA", "Bakersfield, CA", "Penngrove, CA", "Anaheim, CA", "Beverly Hills, CA", "La Mirada, CA", "Irvine, CA", "Riverside, CA", "Fresno, CA", "Garden Grove, CA", "Valencia, CA", "Berkeley, CA", "Thousand Oaks, CA", "San Luis Obispo, CA", "Pomona, CA", "Vallejo, CA", "Long Beach, CA", "Camarillo, CA", "Chico, CA", "Carson, CA", "Hayward, CA", "Fullerton, CA", "Seaside, CA", "Northridge, CA", "Sacramento, CA", "San Bernardino, CA", "San Marcos, CA", "Turlock, CA", "Santa Ana, CA", "Rancho Cordova, CA", "Orange, CA", "Claremont, CA", "San Jose, CA", "Tarzana, CA", "Cypress, CA", "Ontario, CA", "San Rafael, CA", "Quincy, CA", "Los Altos Hills, CA", "Cerritos, CA", "Hollywood, CA", "San Mateo, CA", "Oakland, CA", "Torrance, CA", "Roseville, CA", "Arcata, CA", "Stockton, CA", "Newport Beach, CA", "Pleasant Hill, CA", "Escondido, CA", "Laguna Beach, CA", "San Dimas, CA", "Loma Linda, CA", "Van Nuys, CA", "Rancho Palos Verdes, CA", "Santa Fe Springs, CA", "Atherton, CA", "Monterey, CA", "Oceanside, CA", "Modesto, CA", "La Jolla, CA", "Burbank, CA", "Fremont, CA", "Belmont, CA", "Costa Mesa, CA", "Angwin, CA", "Palo Alto, CA", "Malibu, CA", "Alhambra, CA", "Whittier, CA", "Emeryville, CA", "Moraga, CA", "Santee, CA", "Visalia, CA", "Santa Clara, CA", "Santa Monica, CA", "Redding, CA", "San Bruno, CA", "Aliso Viejo, CA", "Rohnert Park, CA", "El Cajon, CA", "Stanford, CA", "El Dorado Hills, CA", "Santa Clarita, CA", "Temecula, CA", "Santa Paula, CA", "Los Alamitos, CA", "Davis, CA", "Merced, CA", "Santa Cruz, CA", "La Verne, CA", "Redlands, CA", "Rosemead, CA", "Inglewood, CA", "North Hollywood, CA", "Culver City, CA", "Rocklin, CA",
+                  
+                  "Alamosa, CO", "Aurora, CO", "Littleton, CO", "Denver, CO", "Colorado Springs, CO", "Fort Collins, CO", "Lakewood, CO", "Grand Junction, CO", "Glenwood Springs, CO", "Golden, CO", "Pueblo, CO", "Westminster, CO", "Durango, CO", "Fort Morgan, CO", "Boulder, CO", "Centennial, CO", "USAF Academy, CO", "Greeley, CO", "Lone Tree, CO", "Gunnison, CO", "United States Air Force Academy, CO",
+                  
+                  "New Haven, CT", "New Britain, CT", "New London, CT", "Willimantic, CT", "Fairfield, CT", "East Hartford, CT", "Cromwell, CT", "Hamden, CT", "Waterbury, CT", "Hamden, CT", "Hartford, CT", "Bridgeport, CT", "Storrs, CT", "Groton, CT", "Stamford, CT", "West Hartford, CT", "West Haven, CT", "Middletown, CT", "Danbury, CT",
+                  
+                  "Dover, DE", "Wilmington, DE", "Newark, DE", "New Castle, DE",
+                  
+                  "Miami, FL", "Orlando, FL", "Fort Lauderdale, FL", "Ave Maria, FL", "Leesburg, FL", "Daytona Beach, FL", "Delray Beach, FL", "Altamonte Springs, FL", "Jacksonville, FL", "Marianna, FL", "Gainesville, FL", "Ocala, FL", "Ormond Beach, FL", "Miramar, FL", "Cocoa, FL", "Saint Petersburg, FL", "St. Petersburg, FL", "Boca Raton, FL", "Tampa, FL", "St. Augustine, FL", "Saint Augustine, FL", "Tallahassee, FL", "Temple Terrace, FL", "Lake City, FL", "Fort Myers, FL", "Melbourne, FL", "Hialeah, FL", "Lakeland, FL", "Winter Park, FL", "Panama City, FL", "West Palm Beach, FL", "Hobe Sound, FL", "Naples, FL", "Fort Pierce, FL", "North Miami, FL", "Kissimmee, FL", "Pembroke Pines, FL", "Miami Springs, FL", "Doral, FL", "Sarasota, FL", "Madison, FL", "Niceville, FL", "Lake Worth, FL", "New Port Richey, FL", "Pensacola, FL", "Winter Haven, FL", "Ocala, FL", "Lake Mary, FL", "Palatka, FL", "Saint Leo, FL", "St. Leo, FL", "Largo, FL", "Sanford, FL", "Deerfield Beach, FL", "Avon Park, FL", "Royal Palm Beach, FL", "Clearwater, FL", "Miami Gardens, FL", "Bradenton, FL", "DeLand, FL", "Graceville, FL", "Key West, FL", "Trinity, FL", "Lauderhill, FL", "Coral Gables, FL", "Lake Wales, FL", "Babson Park, FL",
+                  
+                  "Tifton, GA", "Decatur, GA", "Albany, GA", "Cuthbert, GA", "Atlanta, GA", "Augusta, GA", "Mount Berry, GA", "Gainesville, GA", "Mount Vernon, GA", "Morrow, GA", "Brunswick, GA", "Columbus, GA", "Lookout Mountain, GA", "Dalton, GA", "Swainsboro, GA", "Franklin Springs, GA", "Fort Valley, GA", "Milledgeville, GA", "Lawrenceville, GA", "Rome, GA", "Statesboro, GA", "Americus, GA", "Barnesville, GA", "Kennesaw, GA", "Lagrange, GA", "Marietta, GA", "Lithonia, GA", "Macon, GA", "Kings Bay, GA", "Demorest, GA", "West Point, GA", "Waleska, GA", "Savannah, GA", "Douglas, GA", "Thomasville, GA", "Toccoa Falls, GA", "Cleveland , GA", "Athens, GA", "Dahlonega, GA", "Carrollton, GA", "Valdosta, GA", "Young Harris, GA",
+                  
+                  "Laie, HI", "Honolulu, HI", "Hilo, HI", "Kahului, HI", "Kapolei, HI",
+                  
+                  "Boise, ID", "Rexburg, ID", "Twin Falls, ID", "Pocatello, ID", "Lewiston, ID", "Moscow, ID", "Nampa, ID", "Idaho Falls, ID", "Caldwell, ID",
+                  
+                  "Hoffman Estates, IL", "Chicago, IL", "Rock Island, IL", "Aurora, IL", "Lisle, IL", "Carlinville, IL", "Quincy, IL", "Peoria, IL", "Downers Grove, IL", "Addison, IL", "Mount Prospect, IL", "River Forest, IL", "Naperville, IL", "Charleston, IL", "Elmhurst, IL", "Eureka, IL", "University Park, IL", "Greenville, IL", "Skokie, IL", "Jacksonville, IL", "Normal, IL", "Bloomington, IL", "Elgin, IL", "Galesburg, IL", "Danville, IL", "Romeoville, IL", "Lincoln, IL", "Lebanon, IL", "Monmouth, IL", "Lombard, IL", "Dekalb, IL", "Bridgeview, IL", "Evanston, IL", "Bourbannais, IL", "Elsah, IL", "Rockford, IL", "Carbondale, IL", "Edwardsville, IL", "Springfield, IL", "Palos Heights, IL", "Deerfield, IL", "Champaign, IL", "Urbana, IL", "Joliet, IL", "Macomb, IL", "Wheaton, IL",
+                  
+                  "Indianapolis, IN", "Anderson, IN", "Crawfordsville, IN", "Muncie, IN", "Mishawaka, IN", "Whiting, IN", "Greencastle, IN", "Merrillville, IN", "Goshen, IN", "Richmond, IN", "Franklin, IN", "Winona Lake, IN", "Hanover, IN", "Notre Dame, IN", "Huntington, IN", "Fort Wayne, IN", "Terre Haute, IN", "Bloomington, IN", "Kokomo, IN", "Gary, IN", "South Bend, IN", "New Albany, IN", "Marion, IN", "North Manchester, IN", "Jeffersonville, IN", "Oakland City, IN", "Hammond, IN", "West Lafayette, IN", "Saint Mary of the Woods, IN", "St. Mary of the Woods, IN", "Upland, IN", "Angola, IN", "Westfield, IN", "Evansville, IN", "Valparaiso, IN", "Greendale, IN", "Vincennes, IN",
+                  
+                  "Waterloo, IA", "Sioux City, IA", "Storm Lake, IA", "Pella, IA", "Dubuque, IA", "Cedar Rapids, IA", "Mount Vernon, IA", "Epworth, IA", "Sioux Center, IA", "Des Moines, IA", "Ankeny, IA", "Lamoni, IA", "Grinnell, IA", "Davenport, IA", "Ames, IA", "Mount Pleasant, IA", "Decorah, IA", "Fairfield, IA", "Orange City, IA", "Kalona, IA", "Indianola, IA", "Iowa City, IA", "Fayette, IA", "Forest City, IA", "Oskaloosa, IA", "Waverly, IA",
+                  
+                  "Baldwin City, KS", "Haviland, KS", "Atchison, KS", "Lindsborg, KS", "North Newton, KS", "McPherson, KS", "Overland Park, KS", "Kansas City, KS", "Emporia, KS", "Hays, KS", "Wichita, KS", "Lenexa, KS", "Lawrence, KS", "Hesston, KS", "Manhattan, KS", "Salina, KS", "Olathe, KS", "Garden City, KS", "Ottawa, KS", "Pittsburg, KS", "Topeka, KS", "Winfield, KS", "Sterling, KS", "Hillsboro, KS", "Leavenworth, KS",
+                  
+                  "Pippa Passes, KY", "Lexington, KY", "Wilmore, KY", "Florence, KY", "Louisville, KY", "Berea, KY", "Owensboro, KY", "Campbellsville, KY", "Danville, KY", "Pineville, KY", "Richmond, KY", "Georgetown, KY", "Bowling Green, KY", "Grayson, KY", "Jackson, KY", "Frankfort, KY", "Owensboro, KY", "Columbia, KY", "Midway, KY", "Moorehead, KY", "Murray, KY", "Highland Heights, KY", "Crestview Hills, KY", "Lexington, KY", "Barbourville, KY", "Pikeville, KY", "Williamsburg, KY",
+                  
+                  "Shreveport, LA", "Jefferson, LA", "New Orleans, LA", "Baton Rouge, LA", "Grambling, LA", "Kenner, LA", "Pineville, LA", "Ruston, LA", "Lake Charles, LA", "Thibodaux, LA", "Natchitoches, LA", "St. Benedict, LA", "Saint Benedict, LA", "Hammond, LA", "Lafayette, LA", "Monroe, LA",
+                  
+                  "Lewiston, ME", "Bangor, ME", "Brunswick, ME", "Waterville, ME", "Bar Harbor, ME", "Portland, ME", "Castine, ME", "Standish, ME", "Unity, ME", "Orono, ME", "Augusta, ME", "Farmington, ME", "Fort Kent, ME", "Machias, ME", "Presque Isle, ME", "Biddleford, ME",
+                  
+                  "Baltimore, MD", "Bowie, MD", "Laurel, MD", "Frostburg, MD", "Frederick, MD", "Capitol Heights, MD", "Westminster, MD", "Emmitsburg, MD", "Salisbury, MD", "Annapolis, MD", "St. Mary’s City, MD", "Saint Mary’s City, MD", "Stevenson, MD", "Suitland, MD", "Townson, MD", "Princess Anne, MD", "Adelphi, MD", "College Park, MD", "Takoma Park, MD", "Chestertown, MD", "Silver Spring, MD",
+                  
+                  "Cambridge, MA", "Boston, MA", "Springfield, MA", "Amherst, MA", "Paxton, MA", "Worcester, MA", "Wellesley, MA", "Great Barrington, MA", "Longmeadow, MA", "Waltham, MA", "Chestnut Hill, MA", "Bridgewater, MA", "Chicopee, MA", "Milton, MA", "Franklin, MA", "Quincy, MA", "Beverly, MA", "Fitchburg, MA", "Framingham, MA", "Needham, MA", "Wenham, MA", "Brookline, MA", "Newton Centre, MA", "Newton, MA", "North Adams, MA", "Buzzards Bay, MA", "North Andover, MA", "South Hadley, MA", "Dudley, MA", "Haverhill, MA", "Weston, MA", "Brighton, MA", "Salem, MA", "Northampton, MA", "Easton, MA", "Medford, MA", "North Dartmouth, MA", "Lowell, MA", "Norton, MA", "Williamstown, MA",
+                  
+                  "Adrian, MI", "Albion, MI", "Alma, MI", "Alpena, MI", "Berrien Springs, MI", "Grand Rapids, MI", "Owosso, MI", "Brimley, MI", "Mount Pleasant, MI", "Troy, MI", "Howell, MI", "Detroit, MI", "Ann Arbor, MI", "Ypsilanti, MI", "Big Rapids, MI", "Hancock, MI", "Wyoming, MI", "Allendale, MI", "Lansing, MI", "Dearborn, MI", "Hillsdale, MI", "Holland, MI", "Jackson, MI", "Kalamazoo, MI", "Flint, MI", "Benton Harbor, MI", "Sault Ste Marie, MI", "Southfield, MI", "Livonia, MI", "East Lansing, MI", "Houghton, MI", "Marquette, MI", "Traverse City, MI", "Midland, MI", "Rochester Hills, MI", "Olivet, MI", "University Center, MI", "Novi, MI", "Spring Arbor, MI", "Southfield, MI", "Oak Park, MI"
+
+                  )
 
 
 ```
